# advent-of-code-2024

./: .gitignore  LICENSE
01/pyo/: Cargo.toml  process.py  test_process.py
01/pyo/src/: lib.rs
02/pyo/: Cargo.toml  process.py  pyproject.toml  test_process.py
02/pyo/src/: lib.rs
05/rust/: Cargo.toml
05/rust/src/: main.rs
07/: exercise.txt
07/pyo/: Cargo.toml  proccess.py  process.py  test_process.py
07/pyo/src/: lib.rs  stub_gen.rs
09/pyo/: Cargo.toml  makefile  process.py  test_process.py
09/pyo/src/: lib.rs
13/: example_mod.txt  input_mod.txt
13/cuda/: Cargo.toml  Makefile  build.rs  c_interface.cpp  c_interface.h  claw.cu  claw.cuh  cuda_interface.cu  cuda_interface.h
13/cuda/src/: binding.rs  main.rs  read_mod.rs
14/rust/: Cargo.toml
14/rust/src/: main.rs
16/rust/: Cargo.toml
16/rust/src/: main.rs
20/: example.txt
20/cuda_rust/: Cargo.toml  Makefile  build.rs  c_interface.cpp  c_interface.h  cuda_interface.cu  cuda_interface.h  iter.cu  iter.cuh
20/cuda_rust/src/: binding.rs  main.rs
20/rust/: Cargo.toml
20/rust/src/: main.rs
25/rust/: Cargo.toml
25/rust/src/: main.rs
utils/aoc_cli/: Cargo.toml
utils/aoc_cli/src/: lib.rs
utils/boiler_plate/: Cargo.toml
utils/boiler_plate/src/: lib.rs
utils/grid/: Cargo.toml
utils/grid/src/: lib.rs
utils/group_into/: Cargo.toml
utils/group_into/src/: lib.rs
utils/serde_linewise/: Cargo.toml
utils/serde_linewise/src/: lib.rs
