[package]
name = "pyo_stuff"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stubgen"
path = "./src/stub_gen.rs"

[dependencies]
log = "0.4.22"
pyo3 = "0.23.3"
stderrlog = "0.6.0"
pyo3-stub-gen = "0.6.1"
rayon = "1.10.0"

[dev-dependencies]
rstest = "0.23.0"
