[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
log = "0.4.22"
rayon = "1.10.0"
serde = "1.0.216"
serde_linewise = { version = "0.1.0", path = "../../utils/serde_linewise" }
group_into = { version = "0.1.0", path = "../../utils/group_into", features = ["enum-map"] }
boiler_plate = { version = "0.1.0", path = "../../utils/boiler_plate" }

[dev-dependencies]
rstest = "0.23.0"
serde_plain = "1.0.2"
